--- a/TP_2_9_2/TP_2_9_2.vcxproj
+++ b/TP_2_9_2/TP_2_9_2.vcxproj
@@ -140,9 +140,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="task.cpp" />
+    <ClCompile Include="UsersInput.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="text.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="task.h" />
+    <ClInclude Include="UsersInput.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
